# django-task-manager

./: .dockerignore  .env.testing  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  setup.sh
config/: README.md  asgi.py  settings.py  urls.py  wsgi.py
docker/: entrypoint.sh
docs/: README.md  REAMDE.md  futureImprovements.md  objectives.md  prerequisites.md  scalingConcerns.md  schema.md  stack.md
scripts/: docker-compose.sh
static/: README.md
static/css/: styles.css
static/js/: list_toolbar.js  main.js
tasks/: README.md  apps.py  limits.py  models.py  priority_ui.py  project_list_ui.py  status_ui.py  task_list_ui.py  toolbar_ui_common.py  urls.py  views.py
tasks/forms/: README.md  __init__.py  project_form.py  tagged_description_mixin.py  task_form.py
tasks/management/: README.md  __init__.py
tasks/migrations/: 0001_initial.py  0002_project_soonest_due_date_and_more.py  0003_task_description.py  0004_fuzzy_search_trigram.py  0005_refresh_soonest_due_date_open_tasks.py  0006_remove_task_project_id_idx.py  README.md
tasks/queries/: README.md  __init__.py  fuzzy_search.py  home_projects.py  list_filter_common.py  project_list_filters.py  project_tasks.py  project_writes.py  soonest_eligible.py  task_list_filters.py
tests/: README.md  conftest.py  db_init.py  test_fuzzy_search.py  test_home_view.py  test_input_limits.py  test_project_detail_view.py  test_project_list_filters.py  test_project_list_ui.py  test_status_ui.py  test_task_list_filters.py  test_task_list_ui.py
(+37 files in other folders)
