[project]
name = "django-task-manager"
version = "0.1.0"
description = "Basic task management system built with Django."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Web framework
    "django>=5.1,<6",
    # PostgreSQL adapter used by django.db.backends.postgresql
    "psycopg[binary]>=3.2,<4",
]

# Application project — not published as an installable package.
[tool.uv]
package = false
