[project]
name = "django-task-manager"
version = "0.1.0"
description = "Basic task management system built with Django."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Web framework
    "django>=5.1,<6",
    # PostgreSQL adapter used by django.db.backends.postgresql
    "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py", "db_init.py"]
testpaths = ["tests"]

# Application project — not published as an installable package.
[tool.uv]
package = false
